[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-task-manager"
version = "0.1.0"
description = "Agent for Google Meet task management with ASR and voice commands"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "openai-whisper",
]

[project.urls]
Repository = "https://github.com/yourusername/agent-task-manager"

[project.optional-dependencies]
dev = [
    "setuptools",
]

[tool.black]
line-length = 88
target-version = ["py312"]
